fix[style.css]: first-display button on mobile ver

--- a/css/style.css
+++ b/css/style.css
@@ -783,7 +783,6 @@ footer a:hover{
     }
 
     .first-page button{
-        top: 32%;
     }
 
     .first-page-image-box{
